kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deployment
  namespace: springpg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: radulovskia/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
