kubernetes/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spring-postgres
  namespace: springpg
spec:
  serviceName: spring-postgres-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: springpg
    spec:
      containers:
        - name: postgres
          image: postgres:latest
      volumes:
        - name: spring-postgres-data
          persistentVolumeClaim:
            claimName: spring-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: spring-postgres-service
  namespace: springpg
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
