kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
  namespace: springpg
spec:
  type: LoadBalancer
  selector:
    app: spring
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
